--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html>
 
+
+
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>reveal.js</title>
+    <title> niyolpaki, yecto - </title>
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/black.css">
     <!-- Theme used for syntax highlighting of code -->
@@ -18,6 +21,9 @@
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
+
+
+        <!--
     <style type='text/css'>
     body {
         width: 100%;
@@ -71,6 +77,8 @@
         }
     }
     </style>
+
+-->
 </head>
 
 <body>
@@ -90,7 +98,12 @@
                 <p><br><br><br>~ <sub2>thought is in movement</sub2> and <sub2>writing processes</sub2> unfold as frequencies and vibrations through <sub2>space-time </sub2>
                 </p>
             </section>
-            <section data-background-transition="slide" data-background="img/resolana.png">
+
+ <section data-background-video="img/clearr.mp4" controls autoplay>
+</section>
+
+
+            <section data-background-transition="slide" data-background="img/jardim_florido.png">
                 <p><br><br> <br><br> <br><br> <br><br><br><br>
                     / ~ / Where time and space <sub1>never tie back in one particular form ~ </sub1>
                 </p>
@@ -109,6 +122,13 @@
                 </p>
                 <p><br><br><br>
             </section>
+
+                <section data-background-video="img/composite_yecto.mp4, img/composite_yecto.webm">
+                    <audio style="position: relative; top: 230px; left: 97%; width: 80%; display: block;" src = "img/composite_yecto.mp3" controls stop>
+</audio>                
+</section>
+
+
 
             <!--
             <section data-background-transition="slide" data-background="img/resolana.png">
@@ -146,6 +166,9 @@
                 
                 <p><br><br><br>
             </section>
+
+             <section data-background-video="img/lento.mp4" controls autoplay>
+</section>
 
 
         </div>
